<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/your_trips"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_trip_labels"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/start_date_label" />

        <TextView
            android:id="@+id/tv_trip_distance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/distance_travelled_label" />

        <TextView
            android:id="@+id/tv_trip_duration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/trip_duration_label" />

        <TextView
            android:id="@+id/tv_avg_speed_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/avg_speed_label" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_trips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="80dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_clear_all"
        app:layout_constraintTop_toBottomOf="@id/ll_trip_labels" />

    <Button
        android:id="@+id/btn_clear_all"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:backgroundTint="@color/dark_red"
        android:gravity="center"
        android:text="@string/clear_trips"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/rv_trips" />

</androidx.constraintlayout.widget.ConstraintLayout>