<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_frame_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:paddingTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/cl_control_container"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.MapsActivity" />

    <TextView
        android:id="@+id/tv_remaining_distance"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/transparent_light_grey"
        android:gravity="center"
        android:text="@string/null_distance"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_view_trips"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/view_saved_trips_content_description"
        android:src="@drawable/floppy_disk"
        app:fabCustomSize="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_control_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_start_trip"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:alpha=".3"
            android:backgroundTint="@color/green"
            android:text="@string/start_trip"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/ll_trip_info"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent">

            <Chronometer
                android:id="@+id/chrono_timer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent_grey"
                android:gravity="center"
                android:text="@string/default_time"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp" />


            <TextView
                android:id="@+id/tv_distance_tracker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent_grey"
                android:gravity="center"
                android:text="@string/default_distance"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp" />


            <Button
                android:id="@+id/btn_end_trip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/end_trip"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>